# mySystem

./: README.md
systemd/: CMakeLists.txt  TestController.cpp  TestController.h  dbus-test.conf  main.cpp  test.pro  test.service
systemd/build2/: CMakeCache.txt  Makefile  cmake_install.cmake  test
systemd/build2/test_autogen/: moc_predefs.h  mocs_compilation.cpp
systemd/build2/test_autogen/EWIEGA46WW/: moc_TestController.cpp
untitled16/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Widget.cpp  Widget.h  main.cpp
wsUntitled17/: CMakeLists.txt  dbus-wstest.conf  main.cpp  ws.cpp  ws.h  wsTxt.cpp
